--- a/src/main/resources/com/example/bestselling2/Books-view.fxml
+++ b/src/main/resources/com/example/bestselling2/Books-view.fxml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bestselling2.BooksController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="415.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bestselling2.BooksController">
    <children>
-      <TableView fx:id="allBooksView" editable="true" layoutX="19.0" layoutY="46.0" prefHeight="340.0" prefWidth="562.0">
+      <TableView fx:id="allBooksView" editable="true" layoutX="19.0" layoutY="44.0" prefHeight="327.0" prefWidth="562.0">
         <columns>
           <TableColumn fx:id="name" onEditCommit="#initialize" prefWidth="105.0" text="Name" />
             <TableColumn fx:id="author" onEditCommit="#initialize" prefWidth="81.0" text="Author" />
@@ -23,5 +24,6 @@
             <Font name="American Typewriter" size="18.0" />
          </font>
       </Label>
+      <Button fx:id="addRow" layoutX="239.0" layoutY="378.0" mnemonicParsing="false" onAction="#AddRow" prefHeight="26.0" prefWidth="122.0" text="Add Row" />
    </children>
 </Pane>
